@@ -1,5 +1,15 @@
 2011-08-19  Daniel Bates  <dbates@webkit.org>
 
+        Implement ExecutableAllocator::cacheFlush() for QNX
+        https://bugs.webkit.org/show_bug.cgi?id=66611
+
+        Reviewed by Antonio Gomes.
+
+        * jit/ExecutableAllocator.h:
+        (JSC::ExecutableAllocator::cacheFlush):
+
+2011-08-19  Daniel Bates  <dbates@webkit.org>
+
         Implement WTF::atomic{Increment, Decrement}() for QNX
         https://bugs.webkit.org/show_bug.cgi?id=66605
 
